--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ APP_ENV=dev
 COOKIE_SECRET=ezepprnp17m
 SUPERADMIN_USERNAME=superadmin
 SUPERADMIN_PASSWORD=superadmin
+API_PUBLIC.URL=https://p01--server--v7ggq8g6nl78.code
+API_PUBLIC.PORT=443
